--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,7 +68,7 @@ jobs:
         server: ${{ secrets.FTP_DEV_HOST }}
         username: ${{ secrets.FTP_DEV_USER }}
         password: ${{ secrets.FTP_DEV_PASS }}
-        local-dir: public
+        local-dir: public/
         server-dir: /htdocs/
         exclude: |
           .git*
